--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="artist_item_horizontal_padding">16dp</dimen>
+    <dimen name="artist_item_vertical_padding">16dp</dimen>
+    <dimen name="artist_image_padding">16dp</dimen>
+    <dimen name="image_width">75dp</dimen>
+    <dimen name="image_height">75dp</dimen>
 </resources>
